--- a/app/globals.css
+++ b/app/globals.css
@@ -29,3 +29,8 @@ a, a:visited {
   color: inherit;
   text-decoration: none;
 }
+
+input[type="date"]::-webkit-calendar-picker-indicator {
+  filter: invert(1);
+  cursor: pointer;
+}
