--- a/app/globals.css
+++ b/app/globals.css
@@ -24,10 +24,11 @@ button {
   border: none;
   outline: none;
 }
-
-a, a:visited {
-  color: inherit;
-  text-decoration: none;
+@layer base {
+  a, a:visited {
+    color: inherit;
+    text-decoration: none;
+  }
 }
 
 input[type="date"]::-webkit-calendar-picker-indicator {
